fix overflow in api docs overview

--- a/src/app/api-doc/api-docs/api-docs.component.css
+++ b/src/app/api-doc/api-docs/api-docs.component.css
@@ -82,3 +82,7 @@ mat-card-actions {
 .api-description {
     margin-left: 15px;
 }
+
+.card-container {
+    overflow-y: auto;
+}
